<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="option_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="option_load_app">LoadApp - Current repository by Udacity</string>
    <string name="option_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="name_glide">Glide</string>
    <string name="name_load_app">LoadApp</string>
    <string name="name_retrofit">Retrofit</string>
    <string name="not_choose">Please choose a file to download.</string>

    <string name="ok">OK</string>
    <string name="file_label">File name:</string>
    <string name="status_label">Status:</string>
</resources>
